# NTT3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bench_bigint.cpp  bench_sizes.cpp  build_minimal.ps1  test_bigint.cpp  test_correctness.cpp  test_sd_ntt_integrated.cpp
bench/: bench_extended.cpp  bench_vs_gmp.cpp  bench_vs_gmp_str.cpp  plot_bench.py
bigint/: bigint.hpp  div.hpp  mpn.hpp  mul.hpp
docs/: algorithm_and_optimizations_zh.md  flint_small_ntt_integration_plan_zh.md  p50x4_engine_zh.md  radix_conversion_audit.md  structure_change_zh.md  toolchain_env_zh.md  zint_library_audit.md
ntt/: api.hpp  arena.hpp  common.hpp  profile.hpp
ntt/engine/: scheduler.hpp
ntt/kernels/: cyclic_conv.hpp  radix2.hpp  radix3.hpp  radix4.hpp  radix5.hpp
ntt/mont/: mont_scalar.hpp  mont_vec.hpp
ntt/p30x3/: crt.hpp  cyclic_conv.hpp  radix2.hpp  radix3.hpp  radix4.hpp  radix5.hpp  root_plan.hpp  scheduler.hpp
ntt/p50x4/: bailey.hpp  common.hpp  crt.hpp  fft.hpp  fft_ctx.hpp  mixed_radix.hpp  multiply.hpp  pointmul.hpp
ntt/roots/: root_plan.hpp
ntt/simd/: avx2.hpp  v4.hpp
tools/: find_primes.py  plot_bailey_vs_direct_ntt.py  plot_ntt_singleprime_compare.py  plot_transpose_bench.py
